--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,7 @@ dependencies:
   provider: ^5.0.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  test: 1.17.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
